<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/signInFragment">

    <fragment
        android:id="@+id/signInFragment"
        android:name="az.kompressor.app.ui.auth.SignInFragment"
        android:label="@string/sign_in_title"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_signInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_signInFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/signInFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_signInFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="az.kompressor.app.ui.auth.SignUpFragment"
        android:label="@string/sign_up_title"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUpFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_signUpFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="az.kompressor.app.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_carDetailFragment"
            app:destination="@id/carDetailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_postCarFragment"
            app:destination="@id/postCarFragment" />
        <action
            android:id="@+id/action_homeFragment_to_favoritesFragment"
            app:destination="@id/favoritesFragment" />
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_homeFragment_to_notificationsFragment"
            app:destination="@id/notificationsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_adminDashboardFragment"
            app:destination="@id/adminDashboardFragment" />
    </fragment>

    <fragment
        android:id="@+id/carDetailFragment"
        android:name="az.kompressor.app.ui.detail.CarDetailFragment"
        android:label="@string/car_detail_title"
        tools:layout="@layout/fragment_car_detail">
        <argument
            android:name="carId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/postCarFragment"
        android:name="az.kompressor.app.ui.post.PostCarFragment"
        android:label="@string/post_title"
        tools:layout="@layout/fragment_post_car">
        <!-- Empty string = new listing; non-empty = edit mode -->
        <argument
            android:name="editCarId"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="az.kompressor.app.ui.favorites.FavoritesFragment"
        android:label="@string/saved_cars"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favoritesFragment_to_carDetailFragment"
            app:destination="@id/carDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="az.kompressor.app.ui.profile.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_profileFragment_to_postCarFragment"
            app:destination="@id/postCarFragment" />
        <action
            android:id="@+id/action_profileFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_profileFragment_to_carDetailFragment"
            app:destination="@id/carDetailFragment" />
        <action
            android:id="@+id/action_profileFragment_to_adminDashboardFragment"
            app:destination="@id/adminDashboardFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="az.kompressor.app.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_settingsFragment_to_contactFragment"
            app:destination="@id/contactFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_adminDashboardFragment"
            app:destination="@id/adminDashboardFragment" />
    </fragment>

    <fragment
        android:id="@+id/adminDashboardFragment"
        android:name="az.kompressor.app.ui.admin.AdminDashboardFragment"
        android:label="@string/admin_dashboard_title"
        tools:layout="@layout/fragment_admin_dashboard">
        <action
            android:id="@+id/action_adminDashboardFragment_to_carDetailFragment"
            app:destination="@id/carDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="az.kompressor.app.ui.notifications.NotificationsFragment"
        android:label="@string/notifications_title"
        tools:layout="@layout/fragment_notifications">
        <action
            android:id="@+id/action_notificationsFragment_to_carDetailFragment"
            app:destination="@id/carDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/contactFragment"
        android:name="az.kompressor.app.ui.info.ContactFragment"
        android:label="@string/contact_title"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="az.kompressor.app.ui.info.AboutFragment"
        android:label="@string/about_title"
        tools:layout="@layout/fragment_about" />

</navigation>
